--- a/index.html
+++ b/index.html
@@ -6,23 +6,57 @@
     <title>Node Interview Questions</title>
     <style>
       p{
+        box-sizing: border-box;
         margin: 0px 20px;
         color: blue;
       }
       body{
+        box-sizing: border-box;
         padding: 20px;
       }
       pre{
         color: red;
-        margin: 0px 0px;
+        margin: 0px 20px;
+        box-sizing: border-box;
+        
       }
       ul{
         color:darkgreen;
         margin: 0px 20px;
+        box-sizing: border-box;
       }
       table{
+        box-sizing: border-box;
         color:magenta;
         margin: 0px 20px;
+      }
+
+      @media screen and (max-width) {
+        p{
+          box-sizing: border-box;
+        margin: 0px 5px;
+        color: blue;
+      }
+      body{
+        box-sizing: border-box;
+        padding: 5px;
+      }
+      pre{
+        box-sizing: border-box;
+        color: red;
+        margin: 0px 5px;
+      }
+      ul{
+        box-sizing: border-box;
+        color:darkgreen;
+        margin: 0px 5px;
+      }
+      table{
+        box-sizing: border-box;
+        color:magenta;
+        margin: 0px 5px;
+      }
+        
       }
     </style>
   </head>
