--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         margin: 0px 20px;
       }
 
-      @media screen and (max-width) {
+      @media screen and (max-width:600px) {
         p{
           box-sizing: border-box;
         margin: 0px 5px;
@@ -40,11 +40,13 @@
       body{
         box-sizing: border-box;
         padding: 5px;
+        line-height: 25px;
       }
       pre{
         box-sizing: border-box;
         color: red;
         margin: 0px 5px;
+        font-size: 13px;
       }
       ul{
         box-sizing: border-box;
