--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         color: blue;
       }
       body{
+        width: auto;
         box-sizing: border-box;
         padding: 5px;
         line-height: 25px;
@@ -45,8 +46,8 @@
       pre{
         box-sizing: border-box;
         color: red;
-        margin: 0px 5px;
-        font-size: 13px;
+        margin: 0px -10px;
+        font-size: 11px;
       }
       ul{
         box-sizing: border-box;
